--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,8 +1,10 @@
 $yellow: #FFAB08;
 $orange: #FF7020;
 $black: #000000;
+$white: #FFFFFF;
 $light-white: #F9F9F9;
 $light-grey: #F2F2F3;
+
 
 $break_xs: 576px;
 $break_sm: 768px;
@@ -10,7 +12,9 @@ $break_md: 992px;
 $break_lg: 1200px;
 $break_xl: 1400px;
 
-
+// $font-family-regular: 'Nunito', sans-serif;
+// $font-family-semiBold: 'Nunito', sans-serif;
+// $font-family-extraBold: 'Nunito', sans-serif;
 
 $font-family-nunito: 'Nunito', sans-serif;
 
